@@ -1,5 +1,17 @@
 2011-05-17  Ivan Maidanski  <ivmai@mail.ru>
 
+	* pthread_support.c (pthread_join): Add assertion (check thread is
+	finished).
+	* pthread_support.c (GC_register_my_thread): Don't detach the
+	thread if invoked from the thread destructor.
+	* win32_threads.c (GC_register_my_thread): Ditto.
+	* win32_threads.c (GC_unregister_my_thread): Don't delete the
+	thread (just set FINISHED) if the thread is not detached (only if
+	GC_PTHREADS); add assertion (check the thread is not finished).
+	* tests/threadkey_test.c (main): Join some created threads.
+
+2011-05-17  Ivan Maidanski  <ivmai@mail.ru>
+
 	* pthread_support.c (GC_delete_gc_thread): Rename "gc_id" local
 	variable to "t".
 	* win32_threads.c (GC_delete_gc_thread): Ditto.
